# CPU-Scheduling

FCFS_Scheduling/: CMakeLists.txt  README.md
FCFS_Scheduling/include/: FCFS_Scheduler.h  Process.h  Queue.h
FCFS_Scheduling/src/: FCFS_Scheduler.cpp  Process.cpp  Queue.cpp  main.cpp
sjf_scheduler/: CMakeLists.txt  README.md
sjf_scheduler/include/: process.h  scheduler.h
sjf_scheduler/src/: main.cpp  process.cpp  scheduler.cpp
